wow I'm stupid, anyways, I fixed a few things, the bg is working now

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@
 @import url(https://solonovamax.github.io/CatBoyTheme/app/import.css);
 
 :root {
-	--background-image: url(https://github.com/LLai1/CatBoyTheme/blob/master/assets/catboy-2-smaller.png);
+	--background-image: url(https://solonovamax.github.io/CatBoyTheme/assets/catboy-2-smaller.png);
 	--friends-icon: url(https://i.imgur.com/63g6Em8.jpg);
 	--main-transparency: rgba(0, 0, 0, 0.5);
 	--unread-server-animation: rainbow;
